added the backgrounf image of the section "our team" into the folder and corrected mistakes

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -13,14 +13,88 @@
             <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
         </header>
         <div class="our_team-content">
-            <div class="first_colomn">
-                <div class="john_smith_image">
-                    <img src="img/img_about_us_our_team/John_Smith.jpg" alt="">
+            <div class="left">
+                <div class="john_smith_block">
+                    <div class="john_smith_image">
+                        <img src="img/img_about_us_our_team/John_Smith.jpg" alt="">
+                    </div>
+                    <p class="proffesion"> <em>Discoverer</em> </p>
+                    <p class="name_surname"><em>John Smith</em></p>
+                    <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar.
+                    </p>
                 </div>
-                <p class="proffesion"> <em>Discoverer</em> </p>
-                <p class="name_surname"><em>John Smith</em></p>
-                <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar. 
-                </p>
+            </div>
+
+            <div class="right">
+                <div class="second_colomn">
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/jason_arnolds.jpg" alt="">
+                            </div>
+                            <p class="proffesion"> <em>Head Winemaker</em> </p>
+                            <p class="name_surname"><em>Jason Arnolds</em></p>
+                            <p class="description">Jason is responsible for overseeing the production of wine from grape to bottle and for developing and maintaining quality wine.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/albert_drendt.jpg" alt="">
+                            </div>
+                            <p class="person_proffesion"> <em> Tour Guide  </em> </p>
+                            <p class="name_surname"><em>Albert Drendt</em></p>
+                            <p class="person_description">Albert leads tours of our winery and cellars where our wine is stored. Albert knows everything about our wines.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/eliza_anderson.jpg" alt="">
+                            </div>
+                            <p class="proffesion"> <em> Head of Marketing</em> </p>
+                            <p class="name_surname"><em>Eliza Anderson</em></p>
+                            <p class="description">Eliza is engaged in marketing activities and promotes our winery in social networks. She plans promotions and events.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="third_colomn">
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/samantha_welsh.jpg" alt="">
+                            </div>
+                            <p class="proffesion"> <em>Sommelier</em> </p>
+                            <p class="name_surname"><em>Samantha Welsh</em></p>
+                            <p class="description">Samantha is a skilled professional trained in all aspects of wine and food pairing, selection, storage, and wine tasting.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/carlos_kiersh.jpg" alt="">
+                            </div>
+                            <p class="proffesion"> <em>Tasting Room Manager</em> </p>
+                            <p class="name_surname"><em>Carlos Kiersh</em></p>
+                            <p class="description">Carlos meets guests at the tasting and introduces them to our wines. He is fully responsible for wine tastings.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="personality">
+                        <div class="person_details">
+                            <div class="person_image">
+                                <img src="img/img_about_us_our_team/dean_williams.jpg" alt="">
+                            </div>
+                            <p class="proffesion"> <em>Head Guest Relations</em> </p>
+                            <p class="name_surname"><em>Dean Williams</em></p>
+                            <p class="description">Dean is responsible for guest service and guest satisfaction after visiting our events, wine tastings, and guided tours. </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
