--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -13,7 +13,7 @@
             <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
         </header>
         <div class="our_team-content">
-            <div class="left">
+            <div class="our_team-left">
                 <div class="john_smith_block">
                     <div class="john_smith_image">
                         <img src="img/img_about_us_our_team/John_Smith.jpg" alt="">
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="right">
+            <div class="our_team-right">
                 <div class="second_colomn">
                     <div class="personality">
                         <div class="person_details">
