correct img size

--- a/about_us.section-our_events.partial.html
+++ b/about_us.section-our_events.partial.html
@@ -92,7 +92,9 @@
         </div>
       </div>
       <div class="image-container">
-        <img class="image-container__image" src="img/img_about_us_our_events/photo.jpeg" alt="photo man and woman" />
+        <div class="image-container-block">
+          <img class="image-container__image" src="img/img_about_us_our_events/photo.jpeg" alt="photo man and woman" />
+        </div>
       </div>
     </div>
   </section>
