--- a/wineclub.get-your-membership-right-now.partial.html
+++ b/wineclub.get-your-membership-right-now.partial.html
@@ -14,12 +14,13 @@
           Contact us to get more details and order your card.
         </p>
         <div class="get-your-membership-right-now__btn-group">
-          
           <a
             class="get-your-membership-right-now__btn-group--btn-item"
             href="#"
           >
-            <span calss="get-your-membership-right-now__btn-item__text">Contacts</span>
+            <span calss="get-your-membership-right-now__btn-item__text"
+              >Contacts</span
+            >
           </a>
           <a
             class="get-your-membership-right-now__btn-group--btn-item-about-us"
