--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -43,9 +43,9 @@
                             <div class="person_image">
                                 <img src="img/img_about_us_our_team/albert_drendt.jpg" alt="">
                             </div>
-                            <p class="person_proffesion"> <em> Tour Guide  </em> </p>
+                            <p class="proffesion"> <em> Tour Guide  </em> </p>
                             <p class="name_surname"><em>Albert Drendt</em></p>
-                            <p class="person_description">Albert leads tours of our winery and cellars where our wine is stored. Albert knows everything about our wines.
+                            <p class="description">Albert leads tours of our winery and cellars where our wine is stored. Albert knows everything about our wines.
                             </p>
                         </div>
                     </div>
