changed header with div

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <section class="our_team">
-        <header class="our_team-header">
+        <div class="our_team-header">
             <h1 class="our_team-header-heading_text">~OUR TEAM~</h1>
             <p class="our_team-header-main_text">Meet Our <em>Professional</em> Team.</p>
             <p class="description">Our team is our proud. Each of the team members is dedicated to creating the finest wines.</p>
-        </header>
+        </div>
         <div class="our_team-content">
             <div class="our_team-left">
                 <div class="john_smith_block">
