--- a/about_us.header_page.html
+++ b/about_us.header_page.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header class="header_block" >
+    <div class="header_block" >
         <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML"
             data-hx-get="common.header-address.partial.html"></address>
 
@@ -25,7 +25,7 @@
                 <p> <span style="    color: rgba(255, 255, 255, 0.69);">Home></span> <u>About us</u></p>
             </div>
         </div>
-    </header>
+    </div>
 </body>
 
 </html>
