started making the acordion

--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -20,8 +20,20 @@
                     </div>
                     <p class="proffesion"> <em>Discoverer</em> </p>
                     <p class="name_surname"><em>John Smith</em></p>
-                    <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar.
-                    </p>
+                    <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar.</p>
+                    <div class="john_smith_accordion">
+                        <div class="accordion_item">
+                            <label for="" class="accordion_tittle">Read more</label>
+                            <input type="checkbox" class="accordion_input">
+                            <div class="accordion_text">
+                                <p>
+                                    His urge to get closer to the action led him to Texas where he was inspired by the best winery owners and winemaking professionals while building and managing their wine programs for several local restaurants. 
+
+Smith decided to deepen his interest in winemaking industry and gained a Certificate in Viticulture from the Santa Rosa Junior College. Next he pursued a degree in Enology, Plant Science, and Chemistry, and gained winemaking experience while also experimenting with his favorite wine in his own backyard project with his wife, Mary. Finally, he embarked upon an extensive search throughout the area for a suitable location to start a commercial vineyard. That was a foundation of the Pinot Noir Winery.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
