--- a/about_us.section-our_partners.partial.html
+++ b/about_us.section-our_partners.partial.html
@@ -8,56 +8,63 @@
 </head>
 
 <body>
-    <div class="our_partners>
-        <header class="our_partners_header">
+    <section class="our_partners">
+        <div class="our_partners_header">
             <h1" class="our_partners_header-title"> <b>~PARTNERS~</b> </h1>
             <p class="our_partners-header-main_text">Our lovely <em>Partners</em> <span
                     class="our_team-header-main_text-span">.</span></p>
             <p class="our_partners-header-description">We work with a variety of brands and shops.</p>
-        </header>
+        </div>
             <div class="images_container">
-                <div class="block_of_image">
-                    <div class="wide_and_dine">
-                        <img src="img/img_about_us_our_partners/wine_and_dine.svg" alt="Wide&dine">
+                
+                <div class="row 1">
+                    <div class="block_of_image">
+                        <div class=" image wide_and_dine">
+                            <img src="img/img_about_us_our_partners/wine_and_dine.svg" alt="Wide&dine">
+                        </div>
+                    </div>
+                    <div class="block_of_image">
+                        <div class="image cork_and_canvas">
+                            <img src="img/img_about_us_our_partners/cork_and_canvas.svg" alt="Wide&dine">
+                        </div>
+                    </div>
+                    <div class="block_of_image">
+                        <div class="image wineyard_vines">
+                            <img src="img/img_about_us_our_partners/wineyard_vines.svg" alt="Wide&dine">
+                        </div>
+                    </div>
+                    <div class="block_of_image">
+                        <div class="image winesave">
+                            <img src="img/img_about_us_our_partners/winesave.svg" alt="Wide&dine">
+                        </div>
                     </div>
                 </div>
-                <div class="block_of_image">
-                    <div class="cork_and_canvas">
-                        <img src="img/img_about_us_our_partners/cork_and_canvas.svg" alt="Wide&dine">
+
+                <div class="row 2">
+                    <div class="block_of_image">
+                        <div class="image taste_wine">
+                            <img src="img/img_about_us_our_partners/tatewine.svg" alt="Wide&dine">
+                        </div>
                     </div>
-                </div>
-                <div class="block_of_image">
-                    <div class="wineyard_vines">
-                        <img src="img/img_about_us_our_partners/wineyard_vines.svg" alt="Wide&dine">
-                    </div>
-                </div>
-                <div class="block_of_image">
-                    <div class="taste_wine">
-                        <img src="img/img_about_us_our_partners/tatewine.svg" alt="Wide&dine">
-                    </div>
-                <div class="block_of_image">
-                    <div class="winesave">
-                        <img src="img/img_about_us_our_partners/winesave.svg" alt="Wide&dine">
-                    </div>
-                </div>
-                <div class="block_of_image">
-                    <div class="cork_fork">
+                    <div class="block_of_image">
+                        <div class="image cork_fork">
                             <img src="img/img_about_us_our_partners/cork_fork.svg" alt="Wide&dine">
+                        </div>
                     </div>
-                </div>
-                <div class="block_of_image">
-                    <div class="vinoteca">
+                    <div class="block_of_image">
+                        <div class="image vinoteca">
                             <img src="img/img_about_us_our_partners/vinoteca.svg" alt="Wide&dine">
+                        </div>
                     </div>
-                </div>
-                <div class="block_of_image">
-                    <div class="wineglobe">
-                            <img src="img/img_about_us_our_partners/wineglobe.svg" alt="Wide&dine">
+                    <div class="block_of_image">
+                        <div class="image wineglobe">
+                                <img src="img/img_about_us_our_partners/wineglobe.svg" alt="Wide&dine">
+                        </div>
                     </div>
                 </div>
             </div>
             <footer></footer>
-    </div>
+        </section>
 
 </body>
 
