finished the part "our partners"

--- a/about_us.section-our_partners.partial.html
+++ b/about_us.section-our_partners.partial.html
@@ -12,8 +12,8 @@
         <div class="our_partners_header">
             <h1" class="our_partners_header-title"> <b>~PARTNERS~</b> </h1>
             <p class="our_partners-header-main_text">Our lovely <em>Partners</em> <span
-                    class="our_team-header-main_text-span">.</span></p>
-            <p class="our_partners-header-description">We work with a variety of brands and shops.</p>
+                    style="color:#bc6e44;">.</span></p>
+            <p class="our_partners-description high">We work with a variety of brands and shops.</p>
         </div>
             <div class="images_container">
                 
@@ -62,8 +62,11 @@
                         </div>
                     </div>
                 </div>
+
+                
             </div>
-            <footer></footer>
+            <div><p class="our_partners-description low">
+                Want to become our partner? Don't hesitate to contact us.</p></div>
         </section>
 
 </body>
