started making section "about us"

--- a/about_us.html
+++ b/about_us.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABOUT US</title>
-    <link rel="stylesheet" href="css/about_us.css">
-    <link
-    rel="shortcut icon"
-    href="https://placekitten.com/96/139"
-    type="image/x-icon"
-  />
-  <script
-    src="https://unpkg.com/htmx.org@1.9.10"
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ABOUT US</title>
+  <link rel="stylesheet" href="css/about_us.css">
+  <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon" />
+  <script src="https://unpkg.com/htmx.org@1.9.10"
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-    crossorigin="anonymous"
-  ></script>
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
   <!-- Блок 1 Граматович Олександр -->
   <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.header_page.html">
   </header>
-    <!-- Блок 5 | Граматович Олександр-->
-  <section 
-    data-hx-trigger="load" 
-    data-hx-swap="outerHTML" 
-    data-hx-get="about_us.section-our_partners.partial.html">
+  <!-- Блок 2 Граматович Олександр -->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_story.partial.html">
   </section>
-    <!-- Блок 6 | Граматович Олександр-->
-  <section
-    data-hx-trigger="load" 
-    data-hx-swap="outerHTML" 
-    data-hx-get="about_us.section-our_team.partial.html">>
-      
+  <!-- Блок 5 | Граматович Олександр-->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_partners.partial.html">
+  </section>
+  <!-- Блок 6 | Граматович Олександр-->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_team.partial.html">>
+
   </section>
   </section>
-     <!--Блок 7 | Гриців Альбіна-->
-    <section
-      data-hx-trigger="load"
-      data-hx-swap="outerHTML"
-      data-hx-get="about_us.section-our_events.partial.html"
-    ></section>
-    <!--Блок 8 | Валько Владислава-->
-    <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_winery.partial.html">
-    </section>
+  <!--Блок 7 | Гриців Альбіна-->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_events.partial.html">
+  </section>
+  <!--Блок 8 | Валько Владислава-->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_winery.partial.html">
+  </section>
   </main>
 
   <footer>
