added the html part

--- a/about_us.section-our_story.partial.html
+++ b/about_us.section-our_story.partial.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <section class="our_story">
         <div class="our_story-header">
             <h1 class="our_story-header-heading_text">~ ABOUT US ~</h1>
+            <p class="our)story-header-main_text">Read About Our Rich History.</p>
+            <p class="description">We've been enjoying winemaking since 1994 and creating incredible wine.</p>
+        </div>
+        <div class="descriprion_block">
+            <div class="image_block">
+                <img src="/img/about_us-our_story/wine_library.jpg" alt="">
+            </div>
+            <div class="main_text_of_descriprion">
+                <div class="column 1">
+                    <p class="text">
+                        <span>
+                            The Pinot Noir Winery has been a family-owned winery since its founding in the late 1990s. The family of winemakers have passed down their winemaking knowledge and techniques from generation to generation, creating a winemaking tradition that continues to this day. The Pinot Noir Winery was founded by John Smith and his wife, Mary Smith. 
+                        </span>
+                        <span>
+                            John was a farmer and a winemaker, and Mary was a cook and baker. Together they recognized the potential of winemaking in the area and set out to create a winery that would produce high-quality wines.
+                        </span>
+                    </p>
+                </div>
+                <div class="column 2">
+                    <p class="text">
+                        <span>
+                            The Smiths built the winery on a piece of land that John had purchased in the late 1990s. He cleared the land, planted the vines, and built the winery from the ground up. He also developed a unique method of winemaking that would become the hallmark of the Pinot Noir Winery. Now it is recognized by all wineries around the world.
+                        </span>
+                        <span>
+                            Our winemaking method is based on European methods. We use natural fermentation methods and barrels to age the wine and indigenous grape varieties to make the wines, which gave them a unique flavor profile.
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="dates">
+                <div class="date">
+                    <h2 class="year">1994</h2>
+                    <div class="divider_of_components">
+                    </div>
+                    <div class="descriprion">Conversion of the open land to vineyards.</div>
+                </div>
+                <div class="date">
+                    <h2 class="year">1996</h2>
+                    <div class="divider_of_components">
+                    </div>
+                    <div class="descriprion">Pinot Noir foundation by a group of 6 friends.</div>
+                </div>
+                <div class="date">
+                    <h2 class="year">1997</h2>
+                    <div class="divider_of_components">
+                    </div>
+                    <div class="descriprion">Vineyards conversion to organic farming.</div>
+                </div>
+                <div class="date">
+                    <h2 class="year">2005</h2>
+                    <div class="divider_of_components">
+                    </div>
+                    <div class="descriprion">The first release of 500 award-winning wines.</div>
+                </div>
+                <div class="date">
+                    <h2 class="year">2011</h2>
+                    <div class="divider_of_components">
+                    </div>
+                    <div class="descriprion">Opening of wine tastings in our cellars to the public.</div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
+
 </html>
