--- a/index.html
+++ b/index.html
@@ -119,5 +119,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <script src="js/index.js"></script>
   </body>
 </html>
