Improve css in 'Our vineyards' section

--- a/index.section-our-vineyards.partial.html
+++ b/index.section-our-vineyards.partial.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section class="vineyards">
-      <div class="vineyards__container">
+      <div class="vineyards__container container">
         <div class="vineyards__content">
           <h2 class="vineyards__title">~ OUR VINEYARDS ~</h2>
           <p class="vineyards__description">
