add to didribution section hover

--- a/contact_us.section-distribution.partial.html
+++ b/contact_us.section-distribution.partial.html
@@ -16,50 +16,51 @@
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Renadi Beverages</h3>
                 <p class="distribution__item-location">Tampa, FL</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 01</p>
-                <p class="distribution__item-email">renadi@email.com</p>
+                <a href="tel:+1 (234) 567 89 01" class="distribution__item-contact">+1 (234) 567 89 01</a>
+                <a href="mailto:renadi@email.com" class="distribution__item-email">renadi@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Collo Beverages</h3>
                 <p class="distribution__item-location">St. Paul, MN</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 02</p>
-                <p class="distribution__item-email">collo@email.com</p>
+                <a href="tel:+1 (234) 567 89 02" class="distribution__item-contact">+1 (234) 567 89 02</a>
+                <a href="mailto:collo@email.com" class="distribution__item-email">collo@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Thompson Wines</h3>
                 <p class="distribution__item-location">Butte, MT</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 03</p>
-                <p class="distribution__item-email">thompson@email.com</p>
+                <a href="tel:+1 (234) 567 89 03" class="distribution__item-contact">+1 (234) 567 89 03</a>
+                <a href="mailto:thompson@email.com" class="distribution__item-email">thompson@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Drink & Go</h3>
                 <p class="distribution__item-location">Raleigh, NC</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 04</p>
-                <p class="distribution__item-email">drinkngo@email.com</p>
+                <a href="tel:+1 (234) 567 89 04" class="distribution__item-contact">+1 (234) 567 89 04</a>
+                <a href="mailto:drinkngo@email.com" class="distribution__item-email">drinkngo@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Youngs Wines</h3>
                 <p class="distribution__item-location">Portland, OR</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 05</p>
-                <p class="distribution__item-email">youngsw@email.com</p>
+                <a href="tel: +1 (234) 567 89 05" class="distribution__item-contact">+1 (234) 567 89 05</a>
+                <a href="mailto:youngsw@email.com" class="distribution__item-email">youngsw@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">National Beverages</h3>
                 <p class="distribution__item-location">New York, NY</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 06</p>
-                <p class="distribution__item-email">nationalb@email.com</p>
+                <a href="tel:+1 (234) 567 89 06" class="distribution__item-contact">+1 (234) 567 89 06</a>
+                <a href="mailto:nationalb@email.com" class="distribution__item-email">nationalb@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Standard Beverage</h3>
                 <p class="distribution__item-location">Lenexa, KS</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 07</p>
-                <p class="distribution__item-email">standardbev@email.com</p>
+                <a href="tel:1 (234) 567 89 07" class="distribution__item-contact">+1 (234) 567 89 07</a>
+                <a href="mailto: standardbev@email.com" class="distribution__item-email">standardbev@email.com</a>
             </div>
             <div class="distribution__item">
                 <h3 class="distribution__item-title">Republic Distributing</h3>
                 <p class="distribution__item-location">Washington, DC</p>
-                <p class="distribution__item-contact">+1 (234) 567 89 08</p>
-                <p class="distribution__item-email">repubdis@email.com</p>
+                <a href="tel: +1 (234) 567 89 08" class="distribution__item-contact">+1 (234) 567 89 08</a>
+                <a href="mailto: repubdis@email.com"
+                class="distribution__item-email">repubdis@email.com</a>
             </div>
         </div>
         <div class="distribution__footer">
