add hover to trl and email section our_event

--- a/about_us.section-our_events.partial.html
+++ b/about_us.section-our_events.partial.html
@@ -47,7 +47,7 @@
             </div>
             <div class="contact-details">
               <p class="contact-details__label">Call Us & Join</p>
-              <p class="contact-details__info">+1 (234) 567 89 00</p>
+              <a href="tel:1 (234) 567 89 00" class="contact-details__info">+1 (234) 567 89 00</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
             </div>
             <div class="contact-details">
               <p class="contact-details__label">Write us</p>
-              <p class="contact-details__info">pinotnoir@email.com</p>
+              <a href="email:pinotnoir@email.com" class="contact-details__info">pinotnoir@email.com</a>
             </div>
           </div>
         </div>
