test nav header

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><img src="img/header.menu/logo-main.svg" alt="logo-main"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+        
+
     <nav class="header__menu">
         <div class="header__wrapper-list">
             <div class="header__menu-list">
