Add some styles to 'Footer' section

--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -7,27 +7,29 @@
   </head>
   <body>
     <footer class="footer">
-      <div class="footer__text">
-        <div class="footer__logo">
-          <a href="index.html"
-            ><img src="img/img_common/logo.svg" alt="Logo"
-          /></a>
+      <div class="footer__general-info">
+        <div class="footer__text">
+          <div class="footer__logo">
+            <a href="index.html"
+              ><img src="img/img_common/logo.svg" alt="Logo"
+            /></a>
+          </div>
+          <p class="footer__text-description">
+            Our artisan winery located in Austin, Texas is committed to producing
+            delicious, interesting, well-balanced wines with the complexity of
+            flavors. Come and join our tastings or order delvery.
+          </p>
         </div>
-        <p class="footer__text-description">
-          Our artisan winery located in Austin, Texas is committed to producing
-          delicious, interesting, well-balanced wines with the complexity of
-          flavors. Come and join our tastings or order delvery.
-        </p>
-      </div>
-      <div class="footer__contact-info">
-        <p class="footer__contact-text">WRITE US</p>
-        <p class="footer__contact-data">
-          <a href="mailto:pinotnoir@email.com">pinotnoir@email.com</a>
-        </p>
-        <p class="footer__contact-text">CALL US</p>
-        <p class="footer__contact-data">
-          <a href="tel:+12345678900">+1 (234) 567 89 00</a>
-        </p>
+        <div class="footer__contact-info">
+          <p class="footer__contact-text">WRITE US</p>
+          <p class="footer__contact-email">
+            <a href="mailto:pinotnoir@email.com">pinotnoir@email.com</a>
+          </p>
+          <p class="footer__contact-text">CALL US</p>
+          <p class="footer__contact-phone">
+            <a href="tel:+12345678900">+1 (234) 567 89 00</a>
+          </p>
+        </div>
       </div>
       <div class="footer__nav-bar">
         <nav class="footer__nav">
