--- a/common.header-address.partial.html
+++ b/common.header-address.partial.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="address__post">
-            <span class="address__visit">Visit Us:</span><p>121 Pickle Road #97 Austin
+            <span class="address__visit">Visit Us:</span><span>121 Pickle Road #97 Austin</span>
         </div>
     </address>
 </body>
