--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -60,6 +60,7 @@
                     <a href="contact_us.html" class="header__menu-link">
                         CONTACTS
                     </a>
+                    <a href="#" class="header__menu-link header__clock"></a>
                 </div>
             </div>
         </div>
