--- a/common.header-address.partial.html
+++ b/common.header-address.partial.html
@@ -19,6 +19,8 @@
             <b>Call: </b><a href="#" class="address__number">+ 1 (234) 567 89 00</a>
         </div>
 
+        <div><a href="#" class="header__menu-link header__clock"></a></div>
+
         <div class="address__post">
             <span class="address__visit">Visit Us:</span><span>121 Pickle Road #97 Austin</span>
         </div>
