--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <footer class="footer">
-      <div class="footer__general-info">
+      <div class="footer__general-info container">
         <div class="footer__text">
           <div class="footer__logo">
             <a href="index.html"
@@ -31,7 +31,7 @@
           </p>
         </div>
       </div>
-      <div class="footer__nav-bar">
+      <div class="footer__nav-bar container">
         <nav class="footer__nav">
           <ul>
             <li class="footer__nav-item">
