--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -25,14 +25,14 @@
 
       <!-- Testimonial carousel -->
       <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
+        id="testimonial-carousel"
+        class="carousel slide testimonial-carousel"
         data-bs-ride="carousel"
       >
         <div class="carousel-indicators">
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#testimonial-carousel"
             data-bs-slide-to="0"
             class="active"
             aria-current="true"
@@ -40,13 +40,13 @@
           ></button>
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#testimonial-carousel"
             data-bs-slide-to="1"
             aria-label="Slide 2"
           ></button>
           <button
             type="button"
-            data-bs-target="#carouselExampleIndicators"
+            data-bs-target="#testimonial-carousel"
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
@@ -109,7 +109,7 @@
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselExampleIndicators"
+          data-bs-target="#testimonial-carousel"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -118,7 +118,7 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselExampleIndicators"
+          data-bs-target="#testimonial-carousel"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
